# ai-core

./: .env_example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile.python_script  README.md  docker-compose.yml  install.ps1  install.sh  mcp-server-perso.md
.agents/skills/rust-unit-tests/: template.md
.agents/skills/rust-unit-tests/examples/: pure-function.md
.agents/skills/rust-unit-tests/scripts/: find-untested.sh
.claude/: settings.json  settings.local.json
.claude/hooks/: rust-check.py  sync-skill.py
.claude/skills/rust-clippy/: SKILL.md  template.md
.claude/skills/rust-clippy/docs/: RUSTCLIPPY_HISTORY.md
.claude/skills/rust-doc/: SKILL.md  template.md
.claude/skills/rust-doc/examples/: 01_config_after.rs  01_config_before.rs  02_error_after.rs  02_error_before.rs  03_async_client_after.rs  03_async_client_before.rs
.claude/skills/rust-unit-tests/: template.md
.github/workflows/: mcp-configs.yml  mcp-deploy.yml
cloudflared/: config.yml
mcp/: .dockerignore  .env.deploy.example  .env_example  AGENTS.md  CLAUDE.md  Cargo.toml  deploy-remote.sh  deploy.ps1  deploy.sh  docker-compose.yml  generate-configs.mjs  justfile  servers-manifest.json
mcp/cloudflared/: config.yml
mcp/crates/mcp-build/: Cargo.toml
mcp/crates/mcp-build/src/: catalog.rs  fetch.rs  main.rs  mdx.rs  split.rs  tailwind-catalog.md
mcp/crates/mcp-common/: Cargo.toml
mcp/crates/mcp-common/src/: lib.rs
mcp/crates/mcp-configgen/: Cargo.toml
mcp/crates/mcp-configgen/src/: main.rs
mcp/crates/mcp-hooks/: Cargo.toml
mcp/crates/mcp-hooks/src/: main.rs  rust_check.rs  sync_skill.rs
mcp/crates/mcp-server/: .dockerignore  Cargo.toml  Dockerfile
mcp/crates/mcp-server/local-docs/induflow/: induflow-client-generation.md
mcp/crates/mcp-server/local-docs/odoo/: external-api.md  orm-crud.md  orm-domain.md  orm-fields.md  orm-model.md
mcp/crates/mcp-server/src/: crate_proxy.rs  main.rs  oauth.rs  tools.rs
mcp/crates/mcp-server/src/views/: approved.html  authorize.html
mcp/docs/: RUSTDOC_HISTORY.md
mcp/nginx/: mcp.conf.template
mcp/oauth/: Dockerfile  package.json  server.js
mcp/servers/context7/: Dockerfile
mcp/servers/leptos/: Dockerfile
mcp/servers/rust-docs/: Cargo.toml  Dockerfile  fetch-docs.mjs  generate-catalog.cjs  generate-catalog.mjs  package.json  split-daisyui.mjs  strip-mdx.mjs
mcp/servers/rust-docs/docs/axum/: extractors.md  getting-started.md  routing.md
mcp/servers/rust-docs/docs/leptos/: components.md  getting-started.md  signals.md
mcp/servers/rust-docs/docs/rust/: async.md  error-handling.md
mcp/servers/rust-docs/induflow/: induflow-crawling-products.md  induflow-data-schema.md  induflow-general-information.md  induflow-overview.md
mcp/servers/rust-docs/local-docs/induflow/: induflow-api-reference.md  induflow-api-tour-integrate-search.md  induflow-getting-started.md
mcp/servers/rust-docs/src/: crate_proxy.rs  main.rs  oauth.rs  tools.rs
mcp/tests/: test-cache-features.sh
scripts/: api.py  imap_count.py  imap_list_range_items.py
skills/rust-unit-tests/: SKILL.md
skills/rust-unit-tests/examples/: result-type.md  struct-methods.md
skills/rust-unit-tests/scripts/: run-tests.sh
(+2 files in other folders)
