[workspace]
resolver = "2"
members = [
    "crates/mcp-common",
    "crates/mcp-server",
    "crates/mcp-configgen",
    "crates/mcp-build",
    "crates/mcp-hooks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/bpodwinski/ai-core"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
