[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcp-rust-docs"
path = "src/main.rs"

[dependencies]
mcp-common = { path = "../mcp-common" }
rmcp = { version = "1.3", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "schemars",
] }
schemars = "1.2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
