[package]
name = "mcp-rust-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.3", features = ["server", "macros", "http-transport"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
