[package]
name = "mcp-rust-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.3", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "schemars",
] }
schemars = "1.2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
